Adjusting the about and docs links at the top of the page to be correctly aligned with a static gap in between, to be changed at a later time as necessary.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,6 +27,13 @@ aside>h2 {
     display:grid
 }
 
-.navbar a {
-    text-decoration:none
+.navbar {
+    display:flex;
+    justify-content: end;
+    gap:20px;
 }
+
+.navbar > a {
+    text-decoration:none;
+}
+
